# lib-br-td2000

./: 10-brother-td2020.rules  CMakeLists.txt  README.md  chessboard_printer.cpp  cv_td2000_eng_raster_101.txt  libreoffice-1.pbm  main.cpp  main_new.cpp  main_old.cpp  rar-1.pbm  rar.pbm  td2000.cpp  td2000.h
apps/: CMakeLists.txt  app.cpp
include/td2000/: td2000.h
src/: CMakeLists.txt  td2000.cpp
